language/move-compiler/tests/move_check/translate/struct_in_spec.exp
error[E02008]: invalid 'struct' declaration
  ┌─ tests/move_check/translate/struct_in_spec.move:4:9
  │
4 │         struct A {}
  │         ^^^^^^^^^^^ 'struct' is not allowed in spec members

