language/move-compiler/tests/move_check/translate/struct_in_spec.move

module 0x01::M {
    spec module {
        struct A {}
    }
}
